--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,9 @@ anyio==4.4.0
     #   starlette
     #   watchfiles
 async-fastapi-jwt-auth==0.6.5
+async-timeout==4.0.3
+    # via redis
+asyncio-redis==0.16.0
 certifi==2024.6.2
     # via
     #   httpcore
@@ -19,6 +22,8 @@ click==8.1.7
 dnspython==2.6.1
     # via email-validator
 email-validator==2.1.1
+exceptiongroup==1.2.1
+    # via anyio
 fastapi==0.109.2
     # via async-fastapi-jwt-auth
 fastapi-cli==0.0.4
@@ -60,6 +65,7 @@ python-dotenv==1.0.1
     # via pydantic-settings
 python-multipart==0.0.9
 pyyaml==6.0.1
+redis==5.0.4
 rich==13.7.1
     # via typer
 shellingham==1.5.4
@@ -74,10 +80,12 @@ typer==0.12.3
     # via fastapi-cli
 typing-extensions==4.12.1
     # via
+    #   anyio
     #   fastapi
     #   pydantic
     #   pydantic-core
     #   typer
+    #   uvicorn
 ujson==5.10.0
 uvicorn==0.30.1
 uvloop==0.19.0
