--- a/requirements.txt
+++ b/requirements.txt
@@ -49,6 +49,7 @@ markupsafe==2.1.5
 mdurl==0.1.2
     # via markdown-it-py
 orjson==3.10.3
+passlib==1.7.4
 pydantic==2.7.2
     # via
     #   fastapi
